--- a/mods/better-combat.pw.toml
+++ b/mods/better-combat.pw.toml
@@ -1,13 +1,13 @@
 name = "Better Combat"
-filename = "bettercombat-forge-1.8.4+1.20.1.jar"
+filename = "bettercombat-fabric-1.8.4+1.20.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/5sy6g3kz/versions/LsvZlcsu/bettercombat-forge-1.8.4%2B1.20.1.jar"
+url = "https://cdn.modrinth.com/data/5sy6g3kz/versions/bFsjmpf4/bettercombat-fabric-1.8.4%2B1.20.1.jar"
 hash-format = "sha1"
-hash = "010f23aed5e9900ba6a83325fbc2da2ac5cbd25f"
+hash = "a77598f6ee371dcca4203b09720fb5cad4bce148"
 
 [update]
 [update.modrinth]
 mod-id = "5sy6g3kz"
-version = "LsvZlcsu"
+version = "bFsjmpf4"
