--- a/mods/emi.pw.toml
+++ b/mods/emi.pw.toml
@@ -1,6 +1,6 @@
 name = "EMI"
 filename = "emi-1.1.0+1.20.1+forge.jar"
-side = "client"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/fRiHVvU7/versions/yJKM4MT2/emi-1.1.0%2B1.20.1%2Bforge.jar"
