--- a/mods/projectsavethepets.pw.toml
+++ b/mods/projectsavethepets.pw.toml
@@ -1,6 +1,6 @@
 name = "Project: Save the Pets!"
 filename = "projectsavethepets-4.0.1-alpha+2023.7fa0c6d61f.forge.jar"
-side = "both"
+side = "client"
 
 [download]
 url = "https://cdn.modrinth.com/data/VJ6H5k8J/versions/aIwRRiM6/projectsavethepets-4.0.1-alpha%2B2023.7fa0c6d61f.forge.jar"
