--- a/mods/switchy.pw.toml
+++ b/mods/switchy.pw.toml
@@ -1,6 +1,6 @@
 name = "Switchy"
 filename = "switchy-2.9.1+1.20.jar"
-side = "server"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/ss0QuCRx/versions/fUy8osoF/switchy-2.9.1%2B1.20.jar"
