--- a/mods/spectrum.pw.toml
+++ b/mods/spectrum.pw.toml
@@ -1,13 +1,13 @@
 name = "Spectrum"
-filename = "spectrum-1.7.6-deeper-down.jar"
+filename = "spectrum-1.7.7-deeper-down.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/3rc31Hgo/versions/SY8cxlg8/spectrum-1.7.6-deeper-down.jar"
 hash-format = "sha1"
-hash = "445b84c5791fb0b7b37ea2c4b7db881aeeb0b96d"
+hash = "8900f5c276acf2551e4139c3428938e21a4bc20b"
+mode = "metadata:curseforge"
 
 [update]
-[update.modrinth]
-mod-id = "3rc31Hgo"
-version = "SY8cxlg8"
+[update.curseforge]
+file-id = 5118287
+project-id = 556967
